<resources>
    <string name="app_name">Mood Index</string>

    <!-- String for Login and Registration-->
    <string name="logo">Logo</string>
    <string name="Login_subtitle">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login">Login</string>

    <string name="SignUp_Text1">Don\'t have an account yet?</string>
    <string name="SignUp">Sign up now!</string>

    <string name="CreateAcc">Create Account</string>
    <string name="CreateAcc_subs">Please fill in the blank fields</string>
    <string name="Reg_email">Email</string>
    <string name="Reg_password">Password</string>

    <string name="Reg_Male">Male</string>
    <string name="Reg_Female">Female</string>
    <string name="Reg_Age">Age</string>
    <string name="Reg_User">Register</string>

    <!-- String for Home Page-->
    <string name="Their_Mood">Their Mood</string>
    <string name="Their_Mood_subs">This shows how others feel about  the current market!</string>
    <string name="avgPctg_text">0%</string>

    <string name="TheirAvg_Mood">Their Average Mood</string>
    <string name="TheirAvg_Mood_subs">This shows how others feel about the market past 15 days!</string>
    <string name="avgPctgBefore_text">0%</string>

    <string name="SignOut">Sign Out</string>

    <!-- String for Personal Tracker-->
    <string name="Personal_Tracker">Personal Tracker</string>
    <string name="Your_Mood">Your Mood</string>
    <string name="Your_Mood_subs">How do you feel about market today? Swipe the candle bar up and down to express your mood.</string>
    <string name="mood_pctg">0%</string>
    <string name="Submit">Submit</string>
    
    <string name="Your_PastMoods">Your Mood In Past Days</string>
    <string name="Your_PastMoodsPctg">0%</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="Default">default</string>

    <!-- String for Analytics-->
    <string name="search">Search</string>
    <string name="AddtoWL">Add</string>
    <string name="SQ">Enter Stock Quote</string>

    <string name="CP">Current Price</string>
    <string name="HP">  High Price</string>
    <string name="OP">Open Price</string>
    <string name="LP">Low Price</string>
    <string name="PP">Previous Price</string>
    <string name="Tick"> Tick</string>
    <string name="ChangeP">Changed Price</string>
    <string name="P">Percentage</string>

    <!-- String for Settings-->
    <string name="DarkMode">Dark mode</string>
    <string name="About">About - version 1.0.1 </string>
    <string name="ContactDev"> Contact Us</string>

    <string name="ouremail"> TheAbsurd.one@gmail.com</string>
    <string name="moodbar">MoodBar</string>

</resources>