<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/corner"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/app_name"
        android:textSize="30sp" />


    <ScrollView
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="false"
        android:focusableInTouchMode="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/avgMoodBarCard"
                android:layout_width="372dp"
                android:layout_height="600dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/avgMoodTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Their_Mood"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/avgMoodDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Their_Mood_subs"
                        android:textSize="20sp" />

                    <com.example.mycanvas.MoodSeekbar
                        android:id="@+id/avgMoodSeekBar"
                        android:layout_width="278dp"
                        android:layout_height="359dp"
                        android:layout_gravity="center_horizontal"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:max="200"
                        android:progress="100"
                        android:progressDrawable="@android:color/transparent"
                        android:rotation="-90"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/avgPctgTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/avgPctg_text"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/descAvgMood"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/avgMoodBarBeforeCard"
                android:layout_width="372dp"
                android:layout_height="600dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/avgMoodBeforeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TheirAvg_Mood"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/avgMoodBeforeDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TheirAvg_Mood_subs"
                        android:textSize="20sp" />

                    <com.example.mycanvas.MoodSeekbar
                        android:id="@+id/avgMoodSeekBarBefore"
                        android:layout_width="278dp"
                        android:layout_height="359dp"
                        android:layout_gravity="center_horizontal"
                        android:max="200"
                        android:progress="100"
                        android:progressDrawable="@android:color/transparent"
                        android:rotation="-90" />

                    <TextView
                        android:id="@+id/avgPctgBeforeTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/avgPctgBefore_text"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/descAvgMoodBefore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/Personal_Tracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="60dp"
        android:text="@string/Personal_Tracker"

        android:layout_alignParentBottom="true" />


    <Button
        android:id="@+id/SignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignOut"
        android:layout_alignParentBottom="true"
        android:layout_alignBaseline="@+id/Personal_Tracker"
        android:layout_toEndOf="@+id/Personal_Tracker"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toEndOf="@+id/Personal_Tracker"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/bottomViewNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        app:itemTextColor="@color/black"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>